--- a/src/components/Community/Community.css
+++ b/src/components/Community/Community.css
@@ -1,10 +1,14 @@
 .community{
     margin: 2em 5em;
+    margin-right: 2em;
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 3fr 1fr;
+    grid-gap: 20px;
 }
 .programmer-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1.5em;
+    padding-right: 20px;
+    border-right: 1px solid gray;
 }
