--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,21 @@
 .header{
     /* background: #39424ec5; */
-    background: black;
-    color: white;
+    background: rgb(255, 255, 255);
+    /* color: white; */
+    margin: 0  80px;
+    margin-bottom: 10px;
+    box-shadow: 0 3px 10px 0 rgb(0 0 0 / 20%);
+    border-radius: 0 0 5px 5px ;
     text-align: center;
-    /* border-radius: 0 0 5px 5px; */
     padding-bottom: 10px;
 }
 .header h1, p{
     margin: 0;
 
+}
+.header h1{
+    font-size: 25px;
+}
+.header span{
+    color: rgb(39, 221, 69);
 }
