hover effect added on programmer card

--- a/src/components/Programmer/Programmer.css
+++ b/src/components/Programmer/Programmer.css
@@ -3,9 +3,13 @@
 .programmer{
     padding: 25px;
     background-color:  white;
-    /* height: 500px; */
     box-shadow: 0 3px 10px 0 rgb(0 0 0 / 10%);
     border-radius: 10px;
+    transition: box-shadow .2s, transform .3s;
+}
+.programmer:hover{
+    box-shadow: 0 3px 10px 0 rgb(0 0 0 / 40%);
+    transform: scale(1.01); 
 }
 .programmer .top-container{
     text-align: center;
